# cq

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  index.md  main.cpp  oauth2.hpp  quick-start.md  quickstart.md  requests.hpp
.github/workflows/: build.yml
_layouts/: default.html
include/requests/: api.hpp  api.ipp  enums.hpp  header.hpp  headers.hpp  method.hpp  options.hpp  request.hpp  requests.hpp  response.hpp  session.hpp  session.ipp  url.hpp
include/requests/detail/: enum.hpp
include/requests/impl/: api.ipp  session.ipp
include/requests/options/: auth.hpp  body.hpp  data.hpp  fragment.hpp  headers.hpp  json.hpp  method.hpp  query.hpp  text.hpp  url.hpp
src/: CMakeLists.txt  header.cpp  method.cpp  request.cpp  session.cpp  url.cpp
src/options/: auth.cpp  headers.cpp  method.cpp  url.cpp
tests/: CMakeLists.txt  header_tests.cpp  headers_tests.cpp  method_tests.cpp  requests_tests.cpp  url_tests.cpp
